# fourthTask

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celery_worker.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/versions/: dab1ceb1bab8_create_posts_table.py
app/: auth.py  config.py  logging_config.py  main.py  models.py  tasks.py
app/ai/: generator.py  openai_client.py
app/api/: crud.py  schemas.py
app/news_parser/: sites.py  telegram.py
app/telegram/: auth.py
scripts/: init_sources.py
